[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = { version = "0.3.31", features = ["sink", "futures-sink"] }
log = "0.4.22"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-binance = "1.0.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
