[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dotenv = "0.15.0"
eframe = "0.29.1"
egui = "0.29.1"
env_logger = "0.11.5"
futures-util = { version = "0.3.31", features = ["sink", "futures-sink"] }
hex = "0.4.3"
hmac = "0.12.1"
hmac-sha256 = "1.1.7"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
tokio-binance = "1.0.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
ratatui = "0.24.0"
crossterm = "0.27.0"
shared_memory = "0.12.4"
lazy_static = "1.5.0"
futures = "0.3"
